# cmu-lextool

./: .classpath  .project  README  Sphinx Notes.txt  acronym-0.7b  cmudict-0.7b  frontend.config.xml  lm_giga_5k_nvp.sphinx.filler  ps_trie.patch
Aligner/: README  build.xml
Aligner/resource/: batchFile.txt
Aligner/src/: config.xml
KeyWordSpotting/src/: config.xml
PhraseSpotting/: SphinxNotes.txt
PhraseSpotting/src/: MANIFEST.MF  config.xml  phraseSpotterConfig.xml
SphinxTrain/config/: config.cuda
SphinxTrain/include/s3/: Makefile  gauden.h  uttfile.h
branches/cmudict/: README.txt  acronym-0.7b  cmudict-0.7b  cmudict.0.7a  cmudict.0.7a_SPHINX_40
branches/cmudict/scripts/: README.txt  dict_diff.pl  scan_dict.pl  test_cmudict.pl
branches/cmudict/sphinxdict/: cmudict-0.7b_SPHINX_40  cmudict_SPHINX_40
branches/cython-rework/pocketsphinx/: Makefile.am  configure.in
branches/cython-rework/pocketsphinx/swig/python/: Makefile.am  config_test.py  decoder_test.py
branches/cython-rework/pocketsphinx/swig/python/test/: Makefile.am  config_test.py  decoder_test.py  jsgf_test.py  lattice_test.py  lm_test.py
branches/cython-rework/sphinxbase/: configure.in
branches/feature-vad/pocketsphinx/: pocketsphinx.sln
branches/feature-vad/pocketsphinx-android/: build.xml
branches/feature-vad/sphinxbase/: sphinxbase.sln
branches/g2p/decoder/: build.xml
branches/g2p/fst/: .classpath  build.xml  java2openfst.sh  openfst2java.sh
branches/g2p/train/: .cproject  .project  makefile  makefile.release
branches/hl-interface/: build.xml  demo.xml
branches/hl-interface/nbproject/: project.xml
branches/java-example/nutchConf/: nutch-default.xml
branches/kaldi-model/: build.xml
branches/kaldi-model/nbproject/: ide-file-targets.xml
branches/kws/include/: cmdln_macro.h
branches/kws/swig/: ps_decoder.i
branches/long-audio-aligner/: .classpath  README  Sphinx Notes.txt  build.xml
branches/long-audio-aligner/Aligner/: README  build.xml
branches/long-audio-aligner/PhraseSpotting/: SphinxNotes.txt
branches/long-audio-aligner/src/: MANIFEST.MF  config.xml
branches/pocketsphinx_vad/include/: cmdln_macro.h
branches/ppf/: .classpath  .project  abbreviations  abbv_pp.py  sas_lm
branches/ppf/scripts/: createfsa.sh  hyperstring2fst.sh  pp_acc.py
branches/ppf/src/: CreateHyperstringFSA.java  CreateLmFSA.java  FSA.java  GenerateFSA.java  Hyperstring.java  LM_FSA.java  LanguageModelFSA.java  Main.java  PostProcessing.java  Sequence.java  State.java  Trans.java
branches/speaker_diarization/: .project
branches/sphinx4_slm/: .classpath
branches/sphinxtrain-automake/: configure.in
branches/sphinxtrain-automake/etc/: Makefile.am  sphinx_train.cfg
branches/sphinxtrain-automake/include/: Makefile.am
branches/sphinxtrain-automake/scripts_pl/: Makefile.am  RunAll.pl  make_feats.pl  sphinxDocGen.sh.in
branches/sphinxtrain-automake/src/libs/libcep_feat/: Makefile.am
branches/sphinxtrain-automake/src/libs/libio/: Makefile.am
branches/sphinxtrain-automake/src/programs/mk_s2sendump/: Makefile.am
branches/sphinxtrain-automake/src/programs/mk_s3mixw/: Makefile.am
branches/sphinxtrain-automake/src/programs/wave2feat/: Makefile.am
branches/sphinxtrain-automake/test/: Makefile
branches/wdclm/: .classpath
branches/wdclm/sphingid/: crawler-configuration.xml  crawler-configuration.xs
decoder/: .classpath
doc/: HowToCreatWikipediaCorpus.txt
experiments/: README
experiments/etc-rita/: rita.lm  rita.lm.DMP  rita.phone  rita_test.fileids  rita_train.transcription  sphinx_decode.cfg  sphinx_train.cfg
experiments/logdir-an4-mod1/decode/: decode.out
fst/: .classpath  .project  build.xml  buildjar.xml  openfst2java.sh
fst/.externalToolBuilders/: fst Ant.launch
fst/data/openfst/: basic.fst.ser
include/sphinxbase/: bitarr.h  ngram_model.h  qsort_ext.h
lm/trunk/: pom.xml
models/: sas.arpa
pocketsphinx/: VERSION
pocketsphinx/include/: cmdln_macro.h
pocketsphinx/python/: Makefile.am  pocketsphinx.c
pocketsphinx/test/data/: pizza.dic  pizza.vocab
pocketsphinx/test/unit/: Makefile.am  test_lm_pizza.c
resource/: batchFile.txt
resource/transcription/: oov_numbers.txt
ronanki/Database/: description.txt
ronanki/PF_Features/test/: test.README
ronanki/scripts/neighborphones_decode/: single_phone.ctl  single_phone.out  split_wav.py
ronanki/scripts/phoneme_stscores/: calc_ref_data.py  feat.sh  output_data.txt
ronanki/src/: split_wav_word.py
scripts/: README.txt  lm2fst.sh  postp.sh  pp_acc.py  scan_dict.pl  test.pl  winnow_dict.pl
sphingid/: pom.xml
sphingid/branches/sphingid-old/: assembly.xml
sphingid/trunk/: README  assembly.xml  config.xml  crawler-configuration.xml  log4j.properties  pom.xml
sphingid/trunk/conf/: logback.xml
sphingid/trunk/nutch-config/: nutch-site.xml
sphinxbase/debian.maemo/: rules
sphinxbase/include/: Makefile.am
sphinxbase/include/sphinxbase/: ngram_model_pizza.h  pio.h
sphinxbase/python/: sphinxbase.c
sphinxbase/win32/sphinx_cepview/: sphinx_cepview.vcproj
sphinxbase/win32/sphinx_jsgf2fsg/: sphinx_jsgf2fsg.vcproj
sphinxdict/: cmudict-0.7b_SPHINX_40  cmudict_SPHINX_40
src/: CreateLmFSA.java  FSA.java  FiniteStateAutomata.java  GenerateFSA.java  LanguageModelFSA.java  Main.java  PostProcessing.java  Sequence.java  SequenceStack.java  StackCollection.java  State.java  Trans.java  config.xml
src/libsphinxbase/lm/: Makefile.am  lm_ngrams_raw.c  lm_ngrams_raw.h  lm_trie.c  lm_trie.h  lm_trie_find.c  lm_trie_find.h  lm_trie_misc.h  lm_trie_quant.c  lm_trie_quant.h  lm_trie_query.c  lm_trie_query.h  ngram_model.c  (+6 more)
src/train/: WikiExtractor.py  cat_train_valid.sh  create_lm.sh  getwer.sh  mp2wav.sh  readme  rec.sh  run_rnnlm.sh  tocorpus.sh  tornnlm.sh  tounk.sh  wikireader.py
train/: .cproject  dummy.txt  makefile  makefile.release
train/src/: align.cpp  train.cpp
train/swig/: build.xml  buildjar.xml  fstread.cpp  fstread.hpp  openfst2java.sh
troy/audioRecorder/: .actionScriptProperties
troy/rtmplite/: rtmp.py
win32/sphinxbase/: sphinxbase.vcxproj  sphinxbase.vcxproj.filters
(+1216 files in other folders)
