noinst_LTLIBRARIES = libcepfeat.la

libcepfeat_la_SOURCES = \
	 agc.c \
	 agc_emax.c \
	 agc_emax.h \
	 agc_max.c \
	 agc_max.h \
	 cep_frame.c \
	 cep_frame.h \
	 cep_manip.h \
	 cmn.c \
	 dcep_frame.c \
	 dcep_frame.h \
	 ddcep_frame.c \
	 ddcep_frame.h \
	 del_sil_seg.c \
	 del_sil_seg.h \
	 feat.c \
	 lda.c \
	 live_norm.c \
	 norm.c \
	 norm.h \
	 r_agc_noise.c \
	 r_agc_noise.h \
	 s2_cep.c \
	 s2_cep.h \
	 s2_dcep.c \
	 s2_dcep.h \
	 s2_ddcep.c \
	 s2_ddcep.h \
	 s2_feat.c \
	 s2_feat.h \
	 silcomp.c \
	 v1_feat.c \
	 v1_feat.h \
	 v2_feat.c \
	 v2_feat.h \
	 v3_feat.c \
	 v3_feat.h \
	 v4_feat.c \
	 v4_feat.h \
	 v5_feat.c \
	 v5_feat.h \
	 v6_feat.c \
	 v6_feat.h \
	 v7_feat.c \
	 v7_feat.h \
	 v8_feat.c \
	 v8_feat.h

INCLUDES = -I$(top_srcdir)/include
