noinst_LTLIBRARIES = libio.la

libio_la_SOURCES = \
	 areadchar.c \
	 areadshort.c \
	 areadfloat.c \
	 areadint.c \
	 awritefloat.c \
	 pset_io.c \
	 corpus.c \
	 fp_cache.c \
	 fread_retry.c \
	 int32_io.c \
	 model_def_io.c \
	 read_line.c \
	 s2_read_cb.c \
	 s2_read_seno.c \
	 s2_read_tmat.c \
	 s2_read_map.c \
	 s3acc_io.c \
	 s3cb2mllr_io.c \
	 s3gau_full_io.c \
	 s3gau_io.c \
	 s3io.c \
	 s3lamb_io.c \
	 s3map_io.c \
	 s3mixw_io.c \
	 s3_open.c \
	 s3phseg_io.c \
	 s3regmat_io.c \
	 s3tmat_io.c \
	 s3ts2cb_io.c \
	 segdmp.c \
	 share_ctl.c \
	 swap.c \
	 topo_read.c \
	 uttfile.c 

INCLUDES = -I$(top_srcdir)/include

libio_la_LIBADD = $(top_builddir)/src/libs/libcommon/libcommon.la

