TEST_FILES = \
	config_test.py \
	decoder_test.py \
	jsgf_test.py \
	lattice_test.py \
	lm_test.py

examplesdir = $(datadir)/@PACKAGE@/examples/python
dist_examples_DATA = \
	$(TEST_FILES)

#LIBPATH = $(top_builddir)/swig/python
#TESTS_ENVIRONMENT = \
#	PYTHONPATH=$(LIBPATH):$(LIBPATH)/.libs \
#	MODELDIR=$(top_srcdir)/model \
#	DATADIR=$(top_srcdir)/test/data \
#	$(PYTHON)
#
#CLEANFILES = goforward.lat goforward.htk goforward.fsg
